--- a/mtextos/_config.yml
+++ b/mtextos/_config.yml
@@ -6,6 +6,6 @@
 #######################################################################################
 # Book settings
 title                       : Minería de Textos  # The title of the book. Will be placed in the left navbar.
-author                      : Universidad de Alicante  # The author of the book
+author                      : Universitat d'Alacant  # The author of the book
 copyright                   : "2021"  # Copyright year to be placed in the footer
 logo                        : images/logo-master-ca.png  # A path to the book logo
