--- a/mtextos/_toc.yml
+++ b/mtextos/_toc.yml
@@ -1,6 +1,16 @@
 # Table of contents
 # Learn more at https://jupyterbook.org/customize/toc.html
 - file: intro
+- file: bloque1
+- file: bloque2
+  sections:
+    - file: bloque2_embeddings
+    - file: bloque2_recurrent
+    - file: bloque2_transformer
+    - file: bloque2_pretrained
+    - file: bloque2_scraping
+    - file: bloque2_practica
+- file: bloque3
 - file: content
   sections:
     - file: markdown
