--- a/mtextos/_toc.yml
+++ b/mtextos/_toc.yml
@@ -2,6 +2,7 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 - file: intro
 - file: bloque1
+    - file: bloque1_1Introduccion
 - file: bloque2
   sections:
     - file: bloque2_embeddings
