--- a/mtextos/_toc.yml
+++ b/mtextos/_toc.yml
@@ -2,6 +2,7 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 - file: intro
 - file: bloque1
+    sections:
     - file: bloque1_1Introduccion
     - file: bloque1_Practica1
 - file: bloque2
